Should not gather statistics for a system profile.

If |profile| is not a system profile, this does not imply that |original_profile|
is not a system profile. Gathering statistics should be done only for none
system profile, according to:

DCHECK(!profile_->IsOffTheRecord() && !profile_->IsSystemProfile());
https://cs.chromium.org/chromium/src/chrome/browser/profiles/profile_statistics.cc?q=gatherstati&sq=package:chromium&l=28

BUG=683884

Review-Url: https://codereview.chromium.org/2654443002
Cr-Commit-Position: refs/heads/master@{#445462}

Former-commit-id: 8595b7aa3cd26aec6af7d4e90fecc0e31c04ea44